--- a/index.html
+++ b/index.html
@@ -1,18 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is my Dev Page</title>
-</head>
-
-<body>
-    <h1> Voici ma belle page</h1>
-</body>
-
-</html> -->
-
 <!DOCTYPE html>
 <html>
 
@@ -21,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Dinesh Pandiyan | Awesome Dev</title>
+    <title>MachadoLuanPatrick | Future Awesome Dev</title>
 
     <link rel="icon" href="favicon.ico" type="image/png" />
 
@@ -29,8 +14,8 @@
     <link href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/themes/indigo-white.css">
-    <!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
+    <!-- <link rel="stylesheet" href="css/themes/indigo-white.css"> -->
+    <link rel="stylesheet" href="css/themes/green-white.css">
     <!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
     <!-- <link rel="stylesheet" href="css/themes/grey-white.css"> -->
     <!-- <link rel="stylesheet" href="css/themes/white-indigo.css"> -->
@@ -42,46 +27,48 @@
 
 <body>
     <main>
-        <div class="intro">Hello, I'm Dinesh!</div>
-        <div class="tagline">All-Star Dev | Code Fanatic | Linux Hacker | Bleh</div>
+        <div class="intro">
+            &#128526; Hi, I'm Patrick
+        </div>
+        <div class="tagline">Future Dev | Book Fanatic | Code Writer | Video Watcher </div>
         <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
         <div class="icons-social">
-            <a target="_blank" href="https://github.com/flexdinesh">
+            <a target="_blank" href="https://github.com/LuanPM284">
                 <i class="fab fa-github" aria-hidden="true" title="Github"></i>
                 <span class="sr-only">Github</span>
             </a>
-            <a target="_blank" href="https://twitter.com/flexdinesh">
+            <!-- <a target="_blank" href="https://twitter.com/flexdinesh">
                 <i class="fab fa-twitter" aria-hidden="true" title="Twitter"></i>
                 <span class="sr-only">Twitter</span>
-            </a>
-            <a target="_blank" href="https://dev.to/flexdinesh">
+            </a> -->
+            <!-- <a target="_blank" href="https://dev.to/flexdinesh">
                 <i class="fab fa-dev" aria-hidden="true" title="DEV Community"></i>
                 <span class="sr-only">DEV Community</span>
-            </a>
-            <a target="_blank" href="https://stackoverflow.com/story/flexdinesh">
+            </a> -->
+            <a target="_blank" href="https://stackoverflow.com/users/25171200/luan-patrick-machado">
                 <i class="fab fa-stack-overflow" aria-hidden="true" title="StackOverflow"></i>
                 <span class="sr-only">StackOverflow</span>
             </a>
-            <a target="_blank" href="https://www.linkedin.com/in/dineshpandiyan">
+            <a target="_blank" href="https://www.linkedin.com/in/luan-patrick-machado-ab94b0297/">
                 <i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
                 <span class="sr-only">LinkedIn</span>
             </a>
-            <a target="_blank" href="https://medium.com/@flexdinesh">
+            <!-- <a target="_blank" href="https://medium.com/@flexdinesh">
                 <i class="fab fa-medium" aria-hidden="true" title="Medium"></i>
                 <span class="sr-only">Medium</span>
-            </a>
-            <a target="_blank" href="https://www.freecodecamp.org">
+            </a> -->
+            <a target="_blank" href="https://www.freecodecamp.org/LuanPM">
                 <i class="fab fa-free-code-camp" aria-hidden="true" title="FreeCodeCamp"></i>
                 <span class="sr-only">FreeCodeCamp</span>
             </a>
-            <a target="_blank" href="https://www.behance.net">
+            <!-- <a target="_blank" href="https://www.behance.net">
                 <i class="fab fa-behance" aria-hidden="true" title="Behance"></i>
                 <span class="sr-only">Behance</span>
-            </a>
-            <a target="_blank" href="https://codepen.io">
+            </a> -->
+            <!-- <a target="_blank" href="https://codepen.io">
                 <i class="fab fa-codepen" aria-hidden="true" title="CodePen"></i>
                 <span class="sr-only">CodePen</span>
-            </a>
+            </a> -->
         </div>
     </main>
 </body>
